<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"

    android:layout_width="match_parent"

    android:layout_height="match_parent">


    <RelativeLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/UserMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/okBtn"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:text="@string/setBtntext" />

        <Button
            android:id="@+id/plusBtn"
            android:layout_marginBottom="5dp"
            android:layout_alignParentRight="true"
            android:layout_above="@id/okBtn"
            android:text="@string/plusBtntext"
            android:layout_width="55dp"
            android:layout_height="wrap_content" />


        <RadioGroup
            android:layout_marginTop="25dp"
            android:paddingTop="30dp"
            android:gravity="left"
            android:id="@+id/ridogrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton

                android:id="@+id/base_radio_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp" />


            <RadioButton
                android:id="@+id/custom_radio_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RadioGroup>

    </RelativeLayout>
</LinearLayout>
